# whats-up-spearfish

./: .env.example  .gitignore  README.md  build.py  calendar_feed.py  pyproject.toml  tailwind.config.js
_site/: 404.html  calendar.ics  feed.xml  index.html
data/: bhca_calendar.json  bhnf.json  bhnf_alerts.json  bhnf_projects.json  bhpioneer_jobs.json  bhsu_athletics.json  bhsu_calendar.json  bhsu_jobs.json  black_hills_pioneer.json  building_permits.json  clubhouse_spearfish.json  creek_gauge.json  crow_peak_brewing.json  custer_county_chronicle.json  danr_contested_cases.json  danr_public_notices.json  danr_spills.json  ebird.json  inaturalist_plant_cache.json  killians.json  kota.json  lawrence_county.json  lawrence_county_news.json  leones_creamery.json  library_circulation.json  matthews_opera_house.json  native_plants_spotlight.json  news_feeds.json  planning_zoning.json  public_bids.json  public_meetings_youtube.json  rapid_city_journal.json  rapid_city_post.json  redwater_kitchen.json  roadkill.json  sawyer_brewing.json  sdpb_news.json  spearfish_alert_center.json  spearfish_brewing.json  spearfish_calendar.json  (+19 more)
scrapers/: __init__.py  __main__.py  base.py  civic.py  slack.py  utils.py
scripts/: build_readme.py  enrich_plants_inaturalist.py  fetch_bh_county_plant_ids.py  fetch_plants.py
tests/: conftest.py  test_base.py  test_build.py  test_build_new.py  test_build_readme.py  test_calendar_feed.py  test_scraper_bhnf_projects.py  test_scraper_danr.py  test_scraper_library_circulation.py  test_scraper_lunch.py  test_scraper_public_bids.py  test_slack.py  (+3 more)
(+79 files in other folders)
